[workspace]
members = [
  "macro",
  "sys",
]

[package]
authors = ["Tangram <root@tangram.xyz"]
description = "Write Node.js native addons with Node-API in Rust."
documentation = "https://docs.rs/node_api"
edition = "2018"
homepage = "https://github.com/tangramxyz/node_api"
license = "MIT"
name = "node_api"
publish = true
repository = "https://github.com/tangramxyz/node_api"
version = "0.1.0"

[lib]
path = "lib.rs"

[features]
default = []
serde_1 = ["serde"]

[dependencies]
node_api_macro = { version = "0.1", path = "macro" }
node_api_sys = { version = "0.1", path = "sys" }
num = "0.4"
serde = { version = "1", optional = true }
