[workspace]
members = [
  "macro",
  "sys",
  "examples/add",
]

[package]
authors = ["Tangram <root@tangram.dev"]
description = "Write Node.js native addons with Node-API in Rust."
documentation = "https://docs.rs/node_api"
edition = "2018"
homepage = "https://github.com/tangramdotdev/node_api"
license = "MIT"
name = "node_api"
publish = true
repository = "https://github.com/tangramdotdev/node_api"
version = "0.4.0"

[lib]
path = "lib.rs"

[dependencies]
node_api_macro = { version = "0.4", path = "macro" }
node_api_system = { version = "0.4", path = "sys" }
num = "0.4"
serde = { version = "1", optional = true }
