[package]
authors = ["Tangram <root@tangram.xyz"]
description = "Write Node.js native addons with Node-API in Rust."
documentation = "https://docs.rs/node_api_sys"
edition = "2018"
homepage = "https://github.com/tangramxyz/node_api"
license = "MIT"
name = "node_api_sys"
publish = true
repository = "https://github.com/tangramxyz/node_api"
version = "0.1.0"

[lib]
path = "lib.rs"

[build-dependencies]
reqwest = { version = "0.11", default-features = false, features = ["blocking", "json", "rustls-tls"] }

[features]
default = ["v7"]
v1 = []
v2 = ["v1"]
v3 = ["v1", "v2"]
v4 = ["v1", "v2", "v3"]
v5 = ["v1", "v2", "v3", "v4"]
v6 = ["v1", "v2", "v3", "v4", "v5"]
v7 = ["v1", "v2", "v3", "v4", "v5", "v6"]
