[package]
authors = ["Tangram <root@tangram.dev"]
description = "Write Node.js native addons with Node-API in Rust."
documentation = "https://docs.rs/node_api_system"
edition = "2018"
homepage = "https://github.com/tangramdotdev/node_api"
license = "MIT"
name = "node_api_system"
publish = true
repository = "https://github.com/tangramdotdev/node_api"
version = "0.5.0"

[lib]
path = "lib.rs"

[features]
default = ["v7"]
v1 = []
v2 = ["v1"]
v3 = ["v1", "v2"]
v4 = ["v1", "v2", "v3"]
v5 = ["v1", "v2", "v3", "v4"]
v6 = ["v1", "v2", "v3", "v4", "v5"]
v7 = ["v1", "v2", "v3", "v4", "v5", "v6"]
